infrastructure/traefik/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: traefik-external
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: traefik-external
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: "*.mmontes.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: websecure-tls
            kind: Secret
            group: core
