infrastructure/traefik/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: traefik-internal
spec:
  gatewayClassName: traefik-internal
  listeners:
    - name: websecure
      port: 8443
      protocol: HTTPS
      hostname: "*.internal.mmontes.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: websecure-tls
            kind: Secret
            group: core
